# QNN-Android-Server

./: .gitignore  .gitmodules  README.md  resolveAndroidDependencies.sh
QNN-Android/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
QNN-Android/app/: CMakeLists.txt  build.gradle
QNN-Android/app/src/main/: AndroidManifest.xml
QNN-Android/app/src/main/cpp/: QnnBackendManager.cpp  QnnBackendManager.hpp  QnnContextManager.cpp  QnnContextManager.hpp  QnnInferenceRunner.cpp  QnnInferenceRunner.hpp  QnnLoader.cpp  QnnLoader.hpp  QnnManager.cpp  QnnManager.hpp  QnnPowerManager.cpp  QnnPowerManager.hpp  QnnTypeMacros.hpp  QnnWrapperUtils.cpp  QnnWrapperUtils.hpp  TFLiteManager.cpp  TFLiteManager.hpp  native-lib.cpp
QNN-Android/app/src/main/cpp/Log/: Logger.hpp
QNN-Android/app/src/main/cpp/Models/: CommonModelBase.hpp  DAv2Model.cpp  DAv2Model.hpp  DEManager.cpp  DEManager.hpp  IModel.hpp  ImageClassificationModel.cpp  ImageClassificationModel.hpp  ModelBase.cpp  ModelBase.hpp  ModelFactory.hpp  ODManager.cpp  ODManager.hpp  ODModel.cpp  ODModel.hpp  SuperResolutionModel.cpp  SuperResolutionModel.hpp  TaskType.hpp  YoloModel.cpp  YoloModel.hpp
QNN-Android/app/src/main/cpp/PAL/: Directory.cpp  Directory.hpp  DynamicLoading.cpp  FileOp.cpp  GetOpt.cpp  Path.cpp  StringOp.cpp
QNN-Android/app/src/main/cpp/QNN/GPU/: QnnGpuCommon.h
QNN-Android/app/src/main/cpp/QNN/HTP/: QnnHtpCommon.h  QnnHtpDevice.h  QnnHtpGraph.h
QNN-Android/app/src/main/cpp/QNN/HTP/core/: allocator.h  deserializer.h  graph_status.h  op_utils.h  optimize.h  optimize_defs.h  tensor.h  tensor_info.h  tile_extract.h
QNN-Android/app/src/main/cpp/QNN/LPAI/: QnnLpaiBackend.h  QnnLpaiCommon.h
QNN-Android/app/src/main/cpp/QNN/TFLiteDelegate/: QnnTFLiteDelegate.h
QNN-Android/app/src/main/cpp/Utils/: DataUtil.cpp  DynamicLoadUtil.cpp  DynamicLoadUtil.hpp  IOTensor.cpp  IOTensor.hpp  QnnSampleAppUtils.cpp  QnnSampleAppUtils.hpp
QNN-Android/app/src/main/cpp/include/: QnnCommon.h  QnnContext.h  QnnGraph.h  QnnOpDef.h  QnnProperty.h  QnnSdkBuildId.h  QnnTypes.h
QNN-Android/app/src/main/cpp/include/zdl/DlSystem/: UserMemoryMap.hpp
QNN-Android/app/src/main/cpp/include/zdl/SNPE/: RuntimeConfigList.hpp
QNN-Android/app/src/main/java/com/lovelyzzkei/qnnSkeleton/: ARActivity.java  ARCoreSession.java  DetectionOverlayView.java  MainActivity.java  NativeInterface.java
QNN-Android/app/src/main/java/com/lovelyzzkei/qnnSkeleton/GL/: Cube.java  Material.java  ModelObject.java  MyGLRenderer.java  ObjParser.java
QNN-Android/app/src/main/java/com/lovelyzzkei/qnnSkeleton/common/: BitmapUtils.java  Constants.java  CpuFrequencyUtil.java  DummyInputGenerator.java  FileUtil.java  Latency.java  LogUtils.java  PriorityThreadFactory.java
QNN-Android/app/src/main/java/com/lovelyzzkei/qnnSkeleton/common/helpers/: CameraPermissionHelper.java  DepthSettings.java  DisplayRotationHelper.java  EisSettings.java  FullScreenHelper.java  InstantPlacementSettings.java  LocationPermissionHelper.java  SnackbarHelper.java  TapHelper.java  TrackingStateHelper.java
QNN-Android/app/src/main/java/com/lovelyzzkei/qnnSkeleton/samplerender/: Framebuffer.java  GLError.java  GpuBuffer.java  IndexBuffer.java  Mesh.java  SampleRender.java  Shader.java  Texture.java  VertexBuffer.java
QNN-Android/app/src/main/java/com/lovelyzzkei/qnnSkeleton/samplerender/arcore/: BackgroundRenderer.java  PlaneRenderer.java  SpecularCubemapFilter.java
QNN-Android/app/src/main/java/com/lovelyzzkei/qnnSkeleton/tasks/: DepthEstimationManager.java  ImageClassificationManager.java  ObjectDetectionManager.java  SuperResolutionManager.java  TaskManagerFactory.java
QNN-Android/app/src/main/java/com/lovelyzzkei/qnnSkeleton/tasks/base/: BaseManager.java  InferenceResult.java  TaskType.java
QNN-Android/app/src/main/res/drawable-nodpi/: rounded_button.xml
QNN-Android/app/src/main/res/layout/: activity_ar.xml  activity_main.xml
QNN-Android/app/src/main/res/menu/: main_memu.xml  settings_menu.xml
QNN-Android/app/src/main/res/values/: colors.xml  spinners.xml  strings.xml  styles.xml  themes.xml
QNN-Android/demo/: imagenet_labels.txt
QNN-Android/gradle/wrapper/: gradle-wrapper.properties
Server/: README.md
